# wio-terminal-rust-test

./: .gitignore  Cargo.toml  build.ps1  build.sh
.cargo/: config
atsamd/hal/src/samd51/sercom/: uart.rs
src/: lib.rs  main.rs  terminal.rs
wio-terminal/: Cargo.toml
