[package]
name = "wio-terminal-rust-test"
version = "0.1.0"
authors = ["Ben Merritt <blm768@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.6.12"
embedded-graphics = "0.6.2"
embedded-hal = "0.2.4"
nb = "0.1.3"
panic-halt = "0.2"

[dependencies.atsamd-hal]
path = "./atsamd/hal"
features = ["samd51p19a"]

[dependencies.ili9341]
version = "0.3.0"
features = ["embedded-graphics"]

[dependencies.wio-terminal]
path = "./wio-terminal"
